--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
   </head>
-  <body>
+  <body style="margin:0; overflow:hidden;">
 
     <link rel="import" href="tag-graph/tag-graph.html">
     <tag-graph id="tag-graph-v-1" width="1000" height="400">
@@ -17,9 +17,9 @@
       <div data-tags="datatag">both #hashtag and datatag</div>
     </tag-graph>
 
-    <form id="add-form" action="#">
-      <input id="add-input" type="text" value="#hello taggraph"></input>
-      <button type="submit">add</button>
+    <form id="add-form" action="#" style="position:absolute; bottom:10px; left:100px;">
+      <input id="add-input" type="text" value="#hello taggraph" style="width:500px; font-size:150%;"></input>
+      <button type="submit" style="font-size:150%;">add</button>
     </form>
 
     <div id="loading" style="position:absolute; top:10px; left:10px; background-color:white; padding:10px; border-radius:5px;">
@@ -29,6 +29,8 @@
     <script type="text/javascript">
     (function(){
 
+      var tagGraph = document.getElementById("tag-graph-v-1");
+
       // GSS.worker = '../bower_components/gss/browser/gss-solver.min.js'
       Polymer.veiledElements = ["the-graph-editor"];
       window.addEventListener('WebComponentsReady', function() {
@@ -37,7 +39,13 @@
         loading.parentNode.removeChild(loading);
       });
 
-      var tagGraph = document.getElementById("tag-graph-v-1");
+      function resize () {
+        tagGraph.setAttribute("width", window.innerWidth);
+        tagGraph.setAttribute("height", window.innerHeight);
+      }
+      window.addEventListener('resize', resize);
+      resize();
+
       var form = document.getElementById("add-form");
       var input = document.getElementById("add-input");
       form.onsubmit = function (event) {
