--- a/tag-graph/tag-graph-edges.html
+++ b/tag-graph/tag-graph-edges.html
@@ -1,4 +1,4 @@
-<polymer-element name="tag-graph-edges" attributes="edges">
+<polymer-element name="tag-graph-edges" attributes="edges" lightdom>
 
   <script>
     "use strict";
