--- a/tag-graph/tag-graph-tags.html
+++ b/tag-graph/tag-graph-tags.html
@@ -1,6 +1,6 @@
 <link rel="import" href="tag-graph-tag.html">
 
-<polymer-element name="tag-graph-tags">
+<polymer-element name="tag-graph-tags" lightdom>
 
   <script>
     "use strict";
