correct link lib

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>TagGraph dynamic mindmap custom element</title>
     <meta charset="utf-8">
-    <script src="../bower_components/polymer/polymer.min.js"></script>
+    <script src="bower_components/polymer/polymer.min.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
