--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TagGraph dynamic mindmap custom element</title>
+    <title>TagGraph dynamic mindmap custom element </title>
     <meta charset="utf-8">
     <script src="bower_components/polymer/polymer.min.js"></script>
 
@@ -14,12 +14,12 @@
     <tag-graph-editor id="tag-graph-v-1">
       <div>the start of a #non-linear note-taking #web app</div>
       <div>webbiness of the #web is #links</div>
-      <div>#hashtag connects #idea</div>
-      <div>No #idea is an island</div>
-      <div>#Hashtag faster to type than #links</div>
+      <div>#hashtags connect #ideas</div>
+      <div>No #ideas an island</div>
+      <div>#Hashtags faster to type than #links</div>
       <div>force-directed #graph #layout is #non-hierarchical</div>
       <div>#layout by <a href="https://github.com/mbostock/d3/wiki/Force-Layout">d3</a></div>
-      <div>#idea + #graph ~ ideagraph or #taggraph</div>
+      <div>#ideas + #graph ~ ideagraph or #taggraph</div>
       <div>#taggraph.com was a flash project to #explore flickr</div>
       <div>#todo only show part of graph, #explore</div>
       <div>#todo click back to editor</div>
@@ -39,7 +39,6 @@
     <script type="text/javascript">
     (function(){
 
-      // GSS.worker = '../bower_components/gss/browser/gss-solver.min.js'
       Polymer.veiledElements = ["the-graph-editor"];
       window.addEventListener('WebComponentsReady', function() {
         // Remove loading message
